hphp/hack/test/typecheck/instanceof_generic_good_2.php.like_types.exp
File "instanceof_generic_good_2.php", line 36, characters 38-40:
Invalid argument (Typing[4110])
File "instanceof_generic_good_2.php", line 15, characters 5-14:
Expected ~TkInternal#2 because it is an unenforceable type
File "instanceof_generic_good_2.php", line 31, characters 3-8:
But got string
